# Fastapi_ticketing_system

./: .dockerignore  .env  .env.docker  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  poetry_setup_instructions.md  pyproject.toml
src/: main.py
src/api/v1/: comment.py  ticket.py
src/core/: exceptions.py  modules.py
src/core/config/: app_settings.py  database_settings.py  redis_settings.py
src/db/: postgresql.py  redis.py
src/models/: alembic.ini  base_mixins.py  comments.py  history_meta.py  tickets.py
src/models/migrations/: env.py
src/schemas/: comment.py  ticket.py
src/services/crud/: base.py  comment.py  ticket.py
tests/: conftest.py.bak
tests/unit/api/: test_api_structure.py.skip
tests/unit/core/: test_config_settings.py.skip  test_config_simple.py  test_exceptions.py  test_logger.py  test_modules_utils.py.skip
tests/unit/models/: test_base_mixins.py  test_comment_model.py.skip  test_ticket_model.py.skip
tests/unit/schemas/: test_comment_schemas.py.skip  test_ticket_schemas.py.skip
tests/unit/services/: test_base_crud.py.skip
