[project]
name = "selectel-ticketing-system"
version = "0.1.0"
description = "Ticketing system for Selectel"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "alembic>=1.12.0",
    "sqlalchemy>=2.0.0",
    "databases>=0.8.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "orjson>=3.9.0",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "email-validator>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "flake8",
    "pytest"
]

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"
flake8 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
